refactor(skill-gateway): 语法兼容 Java 1.8
- 替换 String.isBlank() → StringUtils.isBlank() (75 处)
- 替换 Map.of() → Collections.singletonMap() / HashMap (61 处)
- 替换 List.of() → Arrays.asList() (6 处)
- 替换 Set.of() → new HashSet<>(Arrays.asList(...)) (2 处)
- 替换 Stream.toList() → .collect(Collectors.toList()) (4 处)
- 新增 StringUtils 工具类, 无外部依赖
- 删除 .mvn/jvm.config (--add-opens 需 JDK 9+)
- pom.xml 无改动, 无新增依赖