@@ -1,6 +1,7 @@
 package com.lobsterai.skillgateway.service;
 
 import com.lobsterai.skillgateway.entity.ServerLedger;
+import com.lobsterai.skillgateway.util.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
@@ -27,7 +28,7 @@ public class LinuxScriptExecutionService {
      * 认证：若配置了 {@code privateKeyPath} 则优先用私钥文件；否则使用 {@code password}。
      */
     public String executeFromLedger(ServerLedger ledger, String command) throws IOException {
-        if (command == null || command.isBlank()) {
+        if (command == null || StringUtils.isBlank(command)) {
             throw new IllegalArgumentException("command is required");
         }
         String trimmed = command.trim();
@@ -41,8 +42,8 @@ public class LinuxScriptExecutionService {
         int port = ledger.getPort() != null && ledger.getPort() > 0 ? ledger.getPort() : 22;
         String user = ledger.getUsername().trim();
 
-        boolean hasKey = ledger.getPrivateKeyPath() != null && !ledger.getPrivateKeyPath().isBlank();
-        boolean hasPw = ledger.getPassword() != null && !ledger.getPassword().isBlank();
+        boolean hasKey = ledger.getPrivateKeyPath() != null && !StringUtils.isBlank(ledger.getPrivateKeyPath());
+        boolean hasPw = ledger.getPassword() != null && !StringUtils.isBlank(ledger.getPassword());
 
         if (hasKey) {
             return sshExecutorService.executeCommand(
@@ -60,14 +61,14 @@ public class LinuxScriptExecutionService {
      * 校验台账行是否具备执行所需最小字段；异常信息不得包含密码内容。
      */
     public void validateLedgerConnection(ServerLedger ledger) {
-        if (ledger.getHost() == null || ledger.getHost().isBlank()) {
+        if (ledger.getHost() == null || StringUtils.isBlank(ledger.getHost())) {
             throw new IllegalArgumentException("Server ledger is missing host");
         }
-        if (ledger.getUsername() == null || ledger.getUsername().isBlank()) {
+        if (ledger.getUsername() == null || StringUtils.isBlank(ledger.getUsername())) {
             throw new IllegalArgumentException("Server ledger is missing username");
         }
-        boolean hasKey = ledger.getPrivateKeyPath() != null && !ledger.getPrivateKeyPath().isBlank();
-        boolean hasPw = ledger.getPassword() != null && !ledger.getPassword().isBlank();
+        boolean hasKey = ledger.getPrivateKeyPath() != null && !StringUtils.isBlank(ledger.getPrivateKeyPath());
+        boolean hasPw = ledger.getPassword() != null && !StringUtils.isBlank(ledger.getPassword());
         if (!hasKey && !hasPw) {
             throw new IllegalArgumentException(
                     "Server ledger has no authentication: set password or private key path");
